--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "concurrently": "3.5.1",
     "eslint-plugin-react": "7.5.1",
     "json-server": "0.12.1",
-    "lodash.uniqueid": "4.0.1",
+    "lodash": "4.17.4",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.0.17",
