--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "semantic-ui-css": "2.2.12",
-    "semantic-ui-react": "0.77.0"
+    "semantic-ui-react": "0.77.0",
+    "superagent": "3.6.0",
+    "superagent-jsonp": "0.1.2",
+    "superagent-promise": "1.1.0"
   },
   "proxy": {
     "/api": {
