--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "data": "json-server -p 4001 -w ./data/db.json -r ./data/routes.json -d 800",
-    "develop": "yarn concurrently \"yarn data\" \"yarn start\""
+    "dev": "yarn concurrently \"yarn data\" \"yarn start\""
   }
 }
