--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-router-dom": "5.0.1",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
-    "semantic-ui-css": "2.4.1",
+    "semantic-ui-css-offline": "1.0.4-2.4.2",
     "semantic-ui-react": "0.88.0",
     "superagent": "5.1.0",
     "superagent-jsonp": "0.2.1",
